<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">System Of Matriculas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log">Log</string>
    <string name="title_activity_ingresar">Ingresar</string>
    <string name="title_activity_new_int_log">NewIntLog</string>
    <string name="title_activity_form_new_user">FormNewUser</string>
    <string name="title_activity_welcome_user">WelcomeUser</string>
    <string name="title_activity_estadisticos_generales">EstadisticosGenerales</string>
    <string name="title_activity_escuela">Escuela</string>
    <string name="title_activity_lis_escuela">LisEscuela</string>
    <string name="title_activity_list_escuela">ListEscuela</string>
    <string name="title_activity_lis_esc">LisEsc</string>
    <string name="label_tweet_search_loader">Descargando escuelas&#8230;</string>
    <string name="label_tweets_not_found">No se encontraron escuelas.</string>
    <string name="title_activity_facultad">Facultad</string>
    <string name="pres">presencial</string>
    <string name="vir">virtuales</string>
    <string name="noma">no matriculados</string>
    <string name="name">nombre</string>
    <string name="cant">cantidad</string>
    <string name="bien">Bienvenido</string>
    <string name="cerrarsecion">Cerrar Seccion</string>
    <string name="repo">Reporte De Matricula</string>
    <string name="cant">cantidad</string>
    <string name="cant">cantidad</string>
    <string name="cant">cantidad</string>
    <string name="cant">cantidad</string>
    <string name="bus">Buscar</string>
    
</resources>
